# pythonji

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
example/: 🐼.🐍
pythonji/: __init__.py  __main__.py
